# tax-crawler

./: .dockerignore  .gitignore  ANTI_DETECTION.md  ANTI_DETECTION_SUMMARY.md  CHANGES.md  CRAWLER_UPDATE_SUMMARY.md  DEPLOYMENT_ISSUES.md  Dockerfile  QUICKSTART.md  README.md  app.py  crawler.py  deploy.sh  diagnose_aws.sh  docker-compose.yml  docker-start.sh  example_industry_format.py  main.py  nginx.conf  pyproject.toml  sample_tax_codes.csv  start_server.sh  test_aws_crawl.py  test_crawler.py  test_docker_crawl.sh  test_result.json  test_results_20251031_130621.xlsx
templates/: index.html
